# ProTerGen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
icon/: Icon.aps  Icon.rc  resource.h
res/Textures/: grass_short.dds  sand2.dds  stone1.dds  stone2.dds
shaders/: Common.hlsli  CommonCompute.hlsli  ComputeHNCTile.hlsl  ComputeNhTileTerrain.hlsl  ComputeNoise.hlsl  Debug.hlsl  DefaultBlinnPhong.hlsl  GrassGenCompute.hlsl  GrassParticles.hlsl  InstanceBasic.hlsl  LightingUtil.hlsli  Noise.hlsli  Shadow.hlsli  ShadowCaster.hlsl  Sky.hlsl  TerrainByQuad.hlsl  TerrainTriMorph.hlsl  VTFeedback.hlsl  VT_Debug.hlsl  VirtualTexture.hlsli  VirtualTextureHeightmapAlgorithms.hlsli
src/: App.cpp  App.h  BMPSerializer.cpp  BMPSerializer.h  BufferCreator.cpp  BufferCreator.h  CameraSystem.cpp  CameraSystem.h  CascadeShadowMap.cpp  CascadeShadowMap.h  Clock.cpp  Clock.h  CommonHeaders.h  ConcurrentQueue.h  Config.h  CustomHeightmapTileGenerator.cpp  CustomHeightmapTileGenerator.h  DescriptorHeaps.cpp  DescriptorHeaps.h  ECS.h  FrameResources.cpp  FrameResources.h  GpuBatches.cpp  GpuBatches.h  GrassCompute.cpp  GrassCompute.h  IApp.h  ImageRawData.cpp  ImageRawData.h  JobSystem.cpp  JobSystem.h  LRUCache.h  MainEngine.cpp  MainEngine.h  Material.h  Materials.cpp  Materials.h  MathHelpers.h  Menus.cpp  Menus.h  (+53 more)
